maps/Home.module.css
/* ... */
.navbar-mobile-content-header-signin {
  background: #232f3e;
  padding: 1em 0.5em;
}
.navbar-mobile-content-header-signin .navbar-mobile-content-header-user {
  display: flex;
  align-items: center;
  margin-top: 1em;
}
.navbar-mobile-content-header-signin .navbar-mobile-content-header-user .navbar-mobile-content-header-user-image img {
  border-radius: 50%;
}
.navbar-mobile-content-header-signin .navbar-mobile-content-header-user div:nth-child(2) {
  margin-left: 0.7em;
}
.navbar-mobile-content-header-signin .navbar-mobile-content-header-user div:nth-child(2) p {
  word-break: break-all;
  color: #fff;
  margin-bottom: 0.3em;
  font-size: 1.2rem;
  font-weight: 650;
}

.mobile-nav-page-links .mobile-nav-location {
  padding: 0.6em;
  display: flex;
  align-items: center;
  transition: background 0.5s ease-in-out;
  cursor: pointer;
}
.mobile-nav-page-links .mobile-nav-location .mobile-nav-location-icon {
  color: #000;
  font-size: 2rem;
}
.mobile-nav-page-links .mobile-nav-location p {
  font-weight: 700;
  font-size: 1.2rem;
  margin-left: 0.3em;
}
.mobile-nav-page-links .mobile-nav-location:hover {
  background: #eaeded;
}
.mobile-nav-page-links .mobile-nav-search {
  display: flex;
  align-items: center;
  padding: 0.6em;
  transition: background 0.5s ease-in-out;
  cursor: pointer;
}
.mobile-nav-page-links .mobile-nav-search .mobile-nav-search-icon {
  color: #000;
  font-size: 2rem;
}
.mobile-nav-page-links .mobile-nav-search p {
  font-weight: 700;
  font-size: 1.2rem;
  margin-left: 0.3em;
}
.mobile-nav-page-links .mobile-nav-search:hover {
  background: #eaeded;
}
.mobile-nav-page-links .mobile-nav-orders {
  display: flex;
  align-items: center;
  padding: 0.6em;
  transition: background 0.5s ease-in-out;
  cursor: pointer;
}
.mobile-nav-page-links .mobile-nav-orders .mobile-nav-orders-image {
  position: relative;
  width: 3em;
  height: 3em;
}
.mobile-nav-page-links .mobile-nav-orders p {
  font-weight: 700;
  font-size: 1.2rem;
  margin-left: 0.5em;
}
.mobile-nav-page-links .mobile-nav-orders:hover {
  background: #eaeded;
}
.mobile-nav-page-links .mobile-nav-favorites {
  display: flex;
  align-items: center;
  padding: 0.6em;
  transition: background 0.5s ease-in-out;
  cursor: pointer;
}
.mobile-nav-page-links .mobile-nav-favorites div:first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.mobile-nav-page-links .mobile-nav-favorites div:first-child .mobile-nav-favorites-icon {
  color: #fd5da8;
  font-size: 2.5rem;
}
.mobile-nav-page-links .mobile-nav-favorites div:first-child .mobile-nav-favorites-count {
  position: absolute;
  margin-top: 0.2em;
  margin-left: 0.1em;
  font-size: 1.2rem;
}
.mobile-nav-page-links .mobile-nav-favorites p {
  font-weight: 700;
  font-size: 1.2rem;
  margin-left: 0.5em;
}
.mobile-nav-page-links .mobile-nav-favorites:hover {
  background: #eaeded;
}
.mobile-nav-page-links .mobile-nav-cart {
  display: flex;
  align-items: center;
  padding: 0.6em;
  transition: background 0.5s ease-in-out;
  cursor: pointer;
}
.mobile-nav-page-links .mobile-nav-cart div:first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.mobile-nav-page-links .mobile-nav-cart div:first-child .mobile-nav-cart-image {
  position: relative;
  width: 2.7em;
  height: 3em;
  transform: rotateY(180deg);
}
.mobile-nav-page-links .mobile-nav-cart div:first-child .mobile-nav-cart-count {
  color: #f08804;
  position: absolute;
  margin-left: 0.3em;
  margin-top: -0.4em;
  font-size: 1.2rem;
}
.mobile-nav-page-links .mobile-nav-cart p {
  font-weight: 700;
  font-size: 1.2rem;
  margin-left: 0.5em;
}
.mobile-nav-page-links .mobile-nav-cart:hover {
  background: #eaeded;
}

.mobile-nav-divider {
  background: #232f3e;
  height: 0.5em;
}

.mobile-nav-category-links {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  margin-bottom: 1.5em;
}
.mobile-nav-category-links h1 {
  font-size: 1.6rem;
  padding: 0.3em;
}
.mobile-nav-category-links a {
  color: #000;
  font-weight: 650;
  transition: background 0.5s ease-in-out;
  font-size: 1.1rem;
  width: 100%;
  padding: 0.5em;
}
.mobile-nav-category-links a:hover {
  background: #eaeded;
}
.mobile-nav-category-links a::first-letter {
  text-transform: capitalize;
}

.hamburger-icon-wrapper {
  display: block;
}
.hamburger-icon-wrapper .hamburger-icon {
  color: #fff;
  font-size: 2rem;
  position: relative;
  z-index: 2;
}

@media (min-width: 49em) {
  .hamburger-icon-wrapper {
    display: none;
  }
}
.dropdown-wrapper {
  background: #333333;
  box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.5);
  position: absolute;
  margin-top: 4em;
  padding: 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.dropdown-wrapper .dropdown-close-icon {
  color: #c82b04;
  font-size: 1.5rem;
  position: absolute;
  right: 0.5em;
  top: 0.3em;
  cursor: pointer;
  transition: color 0.5s ease-in-out;
}
.dropdown-wrapper .dropdown-close-icon:hover {
  color: #fa3605;
}
.dropdown-wrapper p {
  color: #fff;
  font-size: 1.1rem;
  font-weight: 650;
  margin-bottom: 0.5em;
  margin-top: 1em;
}

.location-modal-backdrop {
  background: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
}

.location-modal-wrapper {
  position: fixed;
  left: 50%;
  transform: translate(-50%, 0%);
  z-index: 3;
  box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.5);
  width: min(33em, 80%);
}
.location-modal-wrapper .location-modal-content-header {
  background: #eaeded;
  padding: 1em;
}
.location-modal-wrapper .location-modal-content-header p {
  color: #000;
  text-align: center;
  margin-top: 0.6em;
  font-weight: 650;
  font-size: 1.7rem;
}
.location-modal-wrapper .location-modal-content-header .location-modal-close-button {
  color: #c82b04;
  font-size: 2rem;
  position: absolute;
  right: 0.2em;
  top: 0.2em;
  cursor: pointer;
  transition: color 0.5s ease-in-out;
}
/* ... */

